--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mytest",
+  "name": "my-project",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "金满苍 <jinmancang@sensorsdata.cn>",
